tests/unit/default/syntax-error/088-add-pk-table-parens.x.t
---- IN ----
+PK%table(|
---- OUT ----
---- ERR ----
syntax: expected <name> after `+PK%table(` near `|` at position 10 - at line 1
---- EXIT ----
1
